--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>模拟vue</title>
 </head>
 <body>
-
-<div id="app">
-    <p>姓名：{{getFullname}}</p>
+<!-- 页面中原本的 html 模板片段 -->
+<div id="app" name="div1">
+    <p>姓名：{{user.name}}，年龄：{{user.age}}</p>
     <p>年龄：{{user.age}}</p>
-
 </div>
-<button id="xg">按我修改名字</button>
 
-<script src="dist/tue.js"></script>
 </body>
 </html>
